Source/Alternet.UI.Pal/Api/GenericImage.Api.h

ALTERNET_UI_API c_bool GenericImage_SetMaskFromImage_(void* handle, void* image, uint8_t mr, uint8_t mg, uint8_t mb)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::SetMaskFromImage(handle, image, mr, mg, mb);
    });
}
ALTERNET_UI_API void GenericImage_SetOptionString_(void* handle, const char16_t* name, const char16_t* value)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetOptionString(handle, name, value);
    });
}
ALTERNET_UI_API void GenericImage_SetOptionInt_(void* handle, const char16_t* name, int value)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetOptionInt(handle, name, value);
    });
}
ALTERNET_UI_API void GenericImage_SetRGB_(void* handle, int x, int y, uint8_t r, uint8_t g, uint8_t b)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetRGB(handle, x, y, r, g, b);
    });
}
ALTERNET_UI_API void GenericImage_SetRGBRect_(void* handle, RectI rect, uint8_t red, uint8_t green, uint8_t blue)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetRGBRect(handle, rect, red, green, blue);
    });
}
ALTERNET_UI_API void GenericImage_SetImageType_(void* handle, int type)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetImageType(handle, type);
    });
}
ALTERNET_UI_API void GenericImage_SetDefaultLoadFlags_(int flags)
{
    MarshalExceptions<void>([&](){
        GenericImage::SetDefaultLoadFlags(flags);
    });
}
ALTERNET_UI_API int GenericImage_GetLoadFlags_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetLoadFlags(handle);
    });
}
ALTERNET_UI_API void* GenericImage_Copy_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::Copy(handle);
    });
}
ALTERNET_UI_API c_bool GenericImage_CreateFreshImage_(void* handle, int width, int height, c_bool clear)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::CreateFreshImage(handle, width, height, clear);
    });
}
ALTERNET_UI_API void GenericImage_Clear_(void* handle, uint8_t value)
{
    MarshalExceptions<void>([&](){
        GenericImage::Clear(handle, value);
    });
}
ALTERNET_UI_API void GenericImage_DestroyImageData_(void* handle)
{
    MarshalExceptions<void>([&](){
        GenericImage::DestroyImageData(handle);
    });
}
ALTERNET_UI_API void GenericImage_InitAlpha_(void* handle)
{
    MarshalExceptions<void>([&](){
        GenericImage::InitAlpha(handle);
    });
}
ALTERNET_UI_API void* GenericImage_Blur_(void* handle, int blurRadius)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::Blur(handle, blurRadius);
    });
}
ALTERNET_UI_API void* GenericImage_BlurHorizontal_(void* handle, int blurRadius)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::BlurHorizontal(handle, blurRadius);
    });
}
ALTERNET_UI_API void* GenericImage_BlurVertical_(void* handle, int blurRadius)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::BlurVertical(handle, blurRadius);
    });
}
ALTERNET_UI_API void* GenericImage_Mirror_(void* handle, c_bool horizontally)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::Mirror(handle, horizontally);
    });
}
ALTERNET_UI_API void GenericImage_Paste_(void* handle, void* image, int x, int y, int alphaBlend)
{
    MarshalExceptions<void>([&](){
        GenericImage::Paste(handle, image, x, y, alphaBlend);
    });
}
ALTERNET_UI_API void GenericImage_Replace_(void* handle, uint8_t r1, uint8_t g1, uint8_t b1, uint8_t r2, uint8_t g2, uint8_t b2)
{
    MarshalExceptions<void>([&](){
        GenericImage::Replace(handle, r1, g1, b1, r2, g2, b2);
    });
}
ALTERNET_UI_API void GenericImage_Rescale_(void* handle, int width, int height, int quality)
{
    MarshalExceptions<void>([&](){
        GenericImage::Rescale(handle, width, height, quality);
    });
}
ALTERNET_UI_API void GenericImage_Resize_(void* handle, SizeI size, PointI pos, int red, int green, int blue)
{
    MarshalExceptions<void>([&](){
        GenericImage::Resize(handle, size, pos, red, green, blue);
    });
}
ALTERNET_UI_API void* GenericImage_Rotate90_(void* handle, c_bool clockwise)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::Rotate90(handle, clockwise);
    });
}
ALTERNET_UI_API void* GenericImage_Rotate180_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::Rotate180(handle);
    });
}
ALTERNET_UI_API void GenericImage_RotateHue_(void* handle, double angle)
{
    MarshalExceptions<void>([&](){
        GenericImage::RotateHue(handle, angle);
    });
}
ALTERNET_UI_API void GenericImage_ChangeSaturation_(void* handle, double factor)
{
    MarshalExceptions<void>([&](){
        GenericImage::ChangeSaturation(handle, factor);
    });
}
ALTERNET_UI_API void GenericImage_ChangeBrightness_(void* handle, double factor)
{
    MarshalExceptions<void>([&](){
        GenericImage::ChangeBrightness(handle, factor);
    });
}
ALTERNET_UI_API void GenericImage_ChangeHSV_(void* handle, double angleH, double factorS, double factorV)
{
    MarshalExceptions<void>([&](){
        GenericImage::ChangeHSV(handle, angleH, factorS, factorV);
    });
}
ALTERNET_UI_API void* GenericImage_Scale_(void* handle, int width, int height, int quality)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::Scale(handle, width, height, quality);
    });
}
ALTERNET_UI_API void* GenericImage_Size_(void* handle, SizeI size, PointI pos, int red, int green, int blue)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::Size(handle, size, pos, red, green, blue);
    });
}
ALTERNET_UI_API c_bool GenericImage_ConvertAlphaToMask_(void* handle, uint8_t threshold)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::ConvertAlphaToMask(handle, threshold);
    });
}
ALTERNET_UI_API c_bool GenericImage_ConvertAlphaToMaskUseColor_(void* handle, uint8_t mr, uint8_t mg, uint8_t mb, uint8_t threshold)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::ConvertAlphaToMaskUseColor(handle, mr, mg, mb, threshold);
    });
}
ALTERNET_UI_API void* GenericImage_ConvertToGreyscaleEx_(void* handle, double weight_r, double weight_g, double weight_b)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::ConvertToGreyscaleEx(handle, weight_r, weight_g, weight_b);
    });
}
ALTERNET_UI_API void* GenericImage_ConvertToGreyscale_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::ConvertToGreyscale(handle);
    });
}
ALTERNET_UI_API void* GenericImage_ConvertToMono_(void* handle, uint8_t r, uint8_t g, uint8_t b)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::ConvertToMono(handle, r, g, b);
    });
}
ALTERNET_UI_API void* GenericImage_ConvertToDisabled_(void* handle, uint8_t brightness)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::ConvertToDisabled(handle, brightness);
    });
}
ALTERNET_UI_API void* GenericImage_ChangeLightness_(void* handle, int alpha)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::ChangeLightness(handle, alpha);
    });
}
ALTERNET_UI_API uint8_t GenericImage_GetAlpha_(void* handle, int x, int y)
{
    return MarshalExceptions<uint8_t>([&](){
        return GenericImage::GetAlpha(handle, x, y);
    });
}
ALTERNET_UI_API uint8_t GenericImage_GetRed_(void* handle, int x, int y)
{
    return MarshalExceptions<uint8_t>([&](){
        return GenericImage::GetRed(handle, x, y);
    });
}
ALTERNET_UI_API uint8_t GenericImage_GetGreen_(void* handle, int x, int y)
{
    return MarshalExceptions<uint8_t>([&](){
        return GenericImage::GetGreen(handle, x, y);
    });
}
ALTERNET_UI_API uint8_t GenericImage_GetBlue_(void* handle, int x, int y)
{
    return MarshalExceptions<uint8_t>([&](){
        return GenericImage::GetBlue(handle, x, y);
    });
}
ALTERNET_UI_API uint8_t GenericImage_GetMaskRed_(void* handle)
{
    return MarshalExceptions<uint8_t>([&](){
        return GenericImage::GetMaskRed(handle);
    });
}
ALTERNET_UI_API uint8_t GenericImage_GetMaskGreen_(void* handle)
{
    return MarshalExceptions<uint8_t>([&](){
        return GenericImage::GetMaskGreen(handle);
    });
}
ALTERNET_UI_API uint8_t GenericImage_GetMaskBlue_(void* handle)
{
    return MarshalExceptions<uint8_t>([&](){
        return GenericImage::GetMaskBlue(handle);
    });
}
ALTERNET_UI_API int GenericImage_GetWidth_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetWidth(handle);
    });
}
ALTERNET_UI_API int GenericImage_GetHeight_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetHeight(handle);
    });
}
ALTERNET_UI_API SizeI_C GenericImage_GetSize_(void* handle)
{
    return MarshalExceptions<SizeI_C>([&](){
        return GenericImage::GetSize(handle);
    });
}
ALTERNET_UI_API char16_t* GenericImage_GetOptionString_(void* handle, const char16_t* name)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(GenericImage::GetOptionString(handle, name));
    });
}
ALTERNET_UI_API int GenericImage_GetOptionInt_(void* handle, const char16_t* name)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetOptionInt(handle, name);
    });
}
ALTERNET_UI_API void* GenericImage_GetSubImage_(void* handle, RectI rect)
{
    return MarshalExceptions<void*>([&](){
        return GenericImage::GetSubImage(handle, rect);
    });
}
ALTERNET_UI_API int GenericImage_GetImageType_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return GenericImage::GetImageType(handle);
    });
}
ALTERNET_UI_API c_bool GenericImage_HasAlpha_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::HasAlpha(handle);
    });
}
ALTERNET_UI_API c_bool GenericImage_HasMask_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::HasMask(handle);
    });
}
ALTERNET_UI_API c_bool GenericImage_HasOption_(void* handle, const char16_t* name)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::HasOption(handle, name);
    });
}
ALTERNET_UI_API c_bool GenericImage_IsOk_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::IsOk(handle);
    });
}
ALTERNET_UI_API c_bool GenericImage_IsTransparent_(void* handle, int x, int y, uint8_t threshold)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::IsTransparent(handle, x, y, threshold);
    });
}
ALTERNET_UI_API c_bool GenericImage_LoadStreamWithBitmapType_(void* handle, void* stream, int bitmapType, int index)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::LoadStreamWithBitmapType(handle, stream, bitmapType, index);
    });
}
ALTERNET_UI_API c_bool GenericImage_LoadFileWithBitmapType_(void* handle, const char16_t* name, int bitmapType, int index)
{
    return MarshalExceptions<c_bool>([&](){
        return GenericImage::LoadFileWithBitmapType(handle, name, bitmapType, index);
    });
}